--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
          buildPath: "mirador/",
          data: [
            { manifestUri: "./manifests/toganoo_1.json", location: "UCLA Library"},
-           { manifestUri: "./manifests/toganoo_2.json", location: "UCLA Library"},
+           { manifestUri: "http://iiif.library.ucla.edu/ark%3A%2F21198%2Fn1gs4h/manifest?_ga=2.44958567.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
            { manifestUri: "./manifests/toganoo_3.json", location: "UCLA Library"},
            { manifestUri: "./manifests/toganoo_4.json", location: "UCLA Library"},
            { manifestUri: "./manifests/toganoo_5.json", location: "UCLA Library"},
