--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
          data: [
            { manifestUri: "./manifests/toganoo_1.json", location: "UCLA Library"},
            { manifestUri: "http://iiif.library.ucla.edu/ark%3A%2F21198%2Fn1gs4h/manifest?_ga=2.44958567.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
-           { manifestUri: "./manifests/toganoo_3.json", location: "UCLA Library"},
-           { manifestUri: "./manifests/toganoo_4.json", location: "UCLA Library"},
+           { manifestUri: "http://iiif.library.ucla.edu/ark%3A%2F21198%2Fn1c339/manifest?_ga=2.51805290.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
+           { manifestUri: "http://iiif.library.ucla.edu/ark%3A%2F21198%2Fn17892/manifest?_ga=2.37233763.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
            { manifestUri: "./manifests/toganoo_5.json", location: "UCLA Library"},
            { manifestUri: "./manifests/toganoo_6.json", location: "UCLA Library"},
            { manifestUri: "./manifests/toganoo_7.json", location: "UCLA Library"},
