--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
          // layout: "1x2",
          buildPath: "mirador/",
          data: [
-           { manifestUri: "http://iiif.library.ucla.edu/ark%3A%2F21198%2Fn1gs4h/manifest?_ga=2.252119754.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
-           { manifestUri: "http://iiif.library.ucla.edu/ark%3A%2F21198%2Fn1c339/manifest?_ga=2.51805290.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
-           { manifestUri: "http://iiif.library.ucla.edu/ark%3A%2F21198%2Fn17892/manifest?_ga=2.37233763.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
-           { manifestUri: "http://iiif.library.ucla.edu/ark%3A%2F21198%2Fn13k8j/manifest?_ga=2.238994115.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
-           { manifestUri: "http://iiif.library.ucla.edu/ark%3A%2F21198%2Fn1zs57/manifest?_ga=2.238994115.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
-           { manifestUri: "http://iiif.library.ucla.edu/ark%3A%2F21198%2Fn1v328/manifest?_ga=2.237831235.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
+           { manifestUri: "https://iiif.library.ucla.edu/ark%3A%2F21198%2Fn1gs4h/manifest?_ga=2.252119754.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
+           { manifestUri: "https://iiif.library.ucla.edu/ark%3A%2F21198%2Fn1c339/manifest?_ga=2.51805290.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
+           { manifestUri: "https://iiif.library.ucla.edu/ark%3A%2F21198%2Fn17892/manifest?_ga=2.37233763.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
+           { manifestUri: "https://iiif.library.ucla.edu/ark%3A%2F21198%2Fn13k8j/manifest?_ga=2.238994115.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
+           { manifestUri: "https://iiif.library.ucla.edu/ark%3A%2F21198%2Fn1zs57/manifest?_ga=2.238994115.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
+           { manifestUri: "https://iiif.library.ucla.edu/ark%3A%2F21198%2Fn1v328/manifest?_ga=2.237831235.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
          ],
          mainMenuSettings: {
            userLogo: {
