--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
            { manifestUri: "https://iiif.library.ucla.edu/ark%3A%2F21198%2Fn1zs57/manifest?_ga=2.238994115.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
            { manifestUri: "https://iiif.library.ucla.edu/ark%3A%2F21198%2Fn1v328/manifest?_ga=2.237831235.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
            { manifestUri: "https://iiif.library.ucla.edu/ark%3A%2F21198%2Fn1q90b/manifest?_ga=2.233842781.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
-           { manifestUri: "http://iiif.library.ucla.edu/ark%3A%2F21198%2Fn1kk7h/manifest?_ga=2.218415834.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
-           { manifestUri: "http://iiif.library.ucla.edu/ark%3A%2F21198%2Fn1mk86/manifest?_ga=2.218415834.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
+           { manifestUri: "https://iiif.library.ucla.edu/ark%3A%2F21198%2Fn1kk7h/manifest?_ga=2.218415834.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
+           { manifestUri: "https://iiif.library.ucla.edu/ark%3A%2F21198%2Fn1mk86/manifest?_ga=2.218415834.2144526802.1616435528-698766943.1609441917", location: "UCLA Library"},
          ],
          mainMenuSettings: {
            userLogo: {
